--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^5.15.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "^14.1.0",
