--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^5.15.0",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "16.1.0",
+    "next": "^16.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sass": "^1.96.0"
   }
 }
